--- a/oficialia/src/app/nav/nav.component.html
+++ b/oficialia/src/app/nav/nav.component.html
@@ -1,13 +1,20 @@
-<div class="main-content">
-    <div class="card-container">
-        <div class="card">
-            <table>
-                <label for="name">Nombre:</label><br>
-                <input type="text" id="name" name="name" required><br><br>
-                <label for="email">Correo:</label><br>
-                <input type="email" id="email" name="email" required><br><br>
-                <button type="submit" class="btn btn-add">Agregar Usuario</button>
-            </table>
+<div class="ms-auto">
+    <div class="navbar navbar-expand-lg navbar-dark bg-dark d-flex">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto"> <!-- ms-auto alinea los elementos a la derecha dentro del navbar -->
+            <li class="nav-item">
+              <a class="nav-link" href="#">Perfil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Cerrar sesión</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
-</div>
+  </div>
+  
