--- a/oficialia/src/app/pages/dashboard/dashboard.component.html
+++ b/oficialia/src/app/pages/dashboard/dashboard.component.html
@@ -1,33 +1,2 @@
-<app-nav></app-nav>
-<aside class="sidebar bg-dark text-white d-flex flex-column vh-100 p-3">
-  <!-- Header de la barra lateral -->
-  <div class="sidebar-header mb-4">
-    <img src="transporte.png" alt="Logo" class="img-fluid">
-  </div>
-
-  <!-- Menú lateral (nav) -->
-  <nav class="sidebar-nav">
-    <ul class="nav flex-column">
-      <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/dashboard" routerLinkActive="active">
-          <i class="bi bi-house-door"></i> Inicio
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/agenda" routerLinkActive="active">
-          <i class="bi bi-calendar"></i> Agenda
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/profile" routerLinkActive="active">
-          <i class="bi bi-person"></i> Oficios
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/reports" routerLinkActive="active">
-          <i class="bi bi-file-earmark-text"></i> Circulares
-        </a>
-      </li>
-    </ul>
-  </nav>
-</aside>
+<app-dashcontainer></app-dashcontainer>
+<app-card></app-card>
