--- a/oficialia/src/app/components/crud/crud.component.html
+++ b/oficialia/src/app/components/crud/crud.component.html
@@ -9,7 +9,7 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Oficio</th>
       <td mat-cell *matCellDef="let row">{{row.name}}</td>
     </ng-container>
 
