--- a/oficialia/src/app/components/nav/nav.component.html
+++ b/oficialia/src/app/components/nav/nav.component.html
@@ -21,7 +21,8 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>Sistema Integral de Oficialía de Partes</span>
+      <mat-icon>account_circle</mat-icon>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+    <app-dashboard></app-dashboard>
   </mat-sidenav-content>
 </mat-sidenav-container>
