--- a/oficialia/src/app/pages/circular/circular.component.html
+++ b/oficialia/src/app/pages/circular/circular.component.html
@@ -23,10 +23,10 @@
         <span>Sistema Integral de Oficialía de Partes</span>
         <mat-icon>account_circle</mat-icon>
       </mat-toolbar>
-
       <div>
-       <h6>Oficios en tramite</h6>
-      </div>
+        <h6>Nueva Circular</h6>
+       </div>
+
     </mat-sidenav-content>
   </mat-sidenav-container>
   
