--- a/oficialia/src/app/pages/agenda/agenda.component.html
+++ b/oficialia/src/app/pages/agenda/agenda.component.html
@@ -7,7 +7,7 @@
       <mat-nav-list class="centered-list">
         <a mat-list-item routerLink="/main">Inicio</a>
         <a mat-list-item routerLink="/oficio">Oficio</a>
-        <a mat-list-item routerLink="/circulares">Circulares</a>
+        <a mat-list-item routerLink="/circular">Circulares</a>
         <a mat-list-item routerLink="/agenda">Agenda</a>
       </mat-nav-list>
     </mat-sidenav>
@@ -23,6 +23,9 @@
         <span>Sistema Integral de Oficialía de Partes</span>
         <mat-icon>account_circle</mat-icon>
       </mat-toolbar>
+      <div>
+        <h6>Agenda</h6>
+       </div>
 
     </mat-sidenav-content>
   </mat-sidenav-container>
