--- a/oficialia/src/app/pages/main/main.component.html
+++ b/oficialia/src/app/pages/main/main.component.html
@@ -36,6 +36,33 @@
       <div>
        <h6>Oficios en tramite</h6>
       </div>
+      <table mat-table [dataSource]="oficios" class="mat-elevation-z8">
+        
+        <!-- Definición de columnas -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>ID</th>
+          <td mat-cell *matCellDef="let oficio">{{oficio.id}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="fecha">
+          <th mat-header-cell *matHeaderCellDef>Fecha</th>
+          <td mat-cell *matCellDef="let oficio">{{oficio.fecha}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="descripcion">
+          <th mat-header-cell *matHeaderCellDef>Descripción</th>
+          <td mat-cell *matCellDef="let oficio">{{oficio.descripcion}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="estatus">
+          <th mat-header-cell *matHeaderCellDef>Estado</th>
+          <td mat-cell *matCellDef="let oficio">{{oficio.estatus}}</td>
+        </ng-container>
+
+        <!-- Header y Rows -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
       
     </mat-sidenav-content>
   </mat-sidenav-container>
