crud casi funcional

--- a/oficialia/src/app/pages/oficio/oficio.component.css
+++ b/oficialia/src/app/pages/oficio/oficio.component.css
@@ -37,3 +37,10 @@
     text-align: center;
   }
   
+   /* Estilo del formulario */
+   form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 30px;
+  }
