--- a/oficialia/src/app/pages/oficio/oficio.component.html
+++ b/oficialia/src/app/pages/oficio/oficio.component.html
@@ -1,39 +1,78 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #drawer class="sidenav" fixedInViewport
-        [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-        [mode]="(isHandset$ | async) ? 'over' : 'side'"
-        [opened]="(isHandset$ | async) === false">
-      <mat-toolbar><img src="transporte.png" alt="Logo"></mat-toolbar>
-      <mat-nav-list class="centered-list">
-        <a mat-list-item routerLink="/main">Inicio</a>
-        <a mat-list-item routerLink="/oficio">Oficio</a>
-        <a mat-list-item routerLink="/circular">Circulares</a>
-        <a mat-list-item routerLink="/agenda">Agenda</a>
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <mat-toolbar color="primary">
-        <button
-          type="button"
-          aria-label="Toggle sidenav"
-          mat-icon-button
-          (click)="drawer.toggle()">
-          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+  <mat-sidenav #drawer class="sidenav" fixedInViewport
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'"
+    [opened]="(isHandset$ | async) === false">
+    <mat-toolbar>
+      <img src="transporte.png" alt="Logo">
+    </mat-toolbar>
+    <mat-nav-list class="centered-list">
+      <a mat-list-item routerLink="/main">Inicio</a>
+      <a mat-list-item routerLink="/oficio">Oficio</a>
+      <a mat-list-item routerLink="/circular">Circulares</a>
+      <a mat-list-item routerLink="/agenda">Agenda</a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <span>Sistema Integral de Oficialía de Partes</span>
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>account_circle</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="onLogout()">
+          <mat-icon>logout</mat-icon>
+          <span>Cerrar Sesión</span>
         </button>
-        <span>Sistema Integral de Oficialía de Partes</span>
-        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-          <mat-icon>account_circle</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="onLogout()">
-            <mat-icon>logout</mat-icon>
-            <span>Cerrar Sesion</span>
-          </button>
-        </mat-menu>
-      </mat-toolbar>
-      <div>
-        <h6>Nuevo Oficio</h6>
-       </div>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-  
+      </mat-menu>
+    </mat-toolbar>
+
+    <h6>Lista de Oficios</h6>
+    <button mat-raised-button color="primary" (click)="openOficioDialog()">Nuevo Oficio</button>
+
+    <!-- Tabla de Oficios -->
+    <div *ngIf="oficios.length">
+      <table mat-table [dataSource]="oficios">
+        <!-- Definición de columnas -->
+        <ng-container matColumnDef="numero">
+          <th mat-header-cell *matHeaderCellDef> Número </th>
+          <td mat-cell *matCellDef="let oficio">{{ oficio.numero }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="remitente">
+          <th mat-header-cell *matHeaderCellDef> Remitente </th>
+          <td mat-cell *matCellDef="let oficio">{{ oficio.remitente }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="asunto">
+          <th mat-header-cell *matHeaderCellDef> Asunto </th>
+          <td mat-cell *matCellDef="let oficio">{{ oficio.asunto }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef> Acciones </th>
+          <td mat-cell *matCellDef="let oficio">
+            <button mat-icon-button (click)="onEdit(oficio)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-icon-button (click)="onDelete(oficio)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <!-- Filas y celdas -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
