funcion de eliminar resuelta

--- a/oficialia/src/app/pages/agenda/agenda.component.html
+++ b/oficialia/src/app/pages/agenda/agenda.component.html
@@ -9,6 +9,7 @@
         <a mat-list-item routerLink="/oficio">Oficio</a>
         <a mat-list-item routerLink="/circular">Circulares</a>
         <a mat-list-item routerLink="/agenda">Agenda</a>
+        <a mat-list-item routerLink="/report">Reportes</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
