--- a/oficialia/src/app/pages/report/report.component.html
+++ b/oficialia/src/app/pages/report/report.component.html
@@ -33,7 +33,7 @@
         </mat-menu>
       </mat-toolbar>
       <div>
-        <h6>Nueva Circular</h6>
+        <h6>Reportes</h6>
        </div>
 
     </mat-sidenav-content>
