elabroracion de roles y permisos

--- a/oficialia/src/app/pages/circular/circular.component.html
+++ b/oficialia/src/app/pages/circular/circular.component.html
@@ -10,6 +10,7 @@
       <a mat-list-item routerLink="/circular">Circulares</a>
       <a mat-list-item routerLink="/agenda">Agenda</a>
       <a mat-list-item routerLink="/report">Reportes</a>
+      <a mat-list-item routerLink="/user">Permisos y Roles</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
