funcionamiento correcto de subir archivos

--- a/oficialia/src/app/pages/oficio/oficio.component.html
+++ b/oficialia/src/app/pages/oficio/oficio.component.html
@@ -73,7 +73,7 @@
             <button mat-icon-button (click)="onDelete(oficio)">
               <mat-icon>delete</mat-icon>
             </button>
-            <button mat-icon-button (click)="openFileSelector(oficio)">
+            <button mat-icon-button (click)="openFileSelector()">
               <mat-icon>archive</mat-icon>
             </button>
           </td>
