--- a/oficialia/src/app/pages/oficio/oficio.component.html
+++ b/oficialia/src/app/pages/oficio/oficio.component.html
@@ -64,6 +64,20 @@
           <td mat-cell *matCellDef="let oficio">{{ oficio.asunto }}</td>
         </ng-container>
 
+        <ng-container matColumnDef="archivo">
+          <th mat-header-cell *matHeaderCellDef>Archivo</th>
+          <td mat-cell *matCellDef="let oficio">
+            <!-- Mostrar el nombre del archivo si existe -->
+            <a *ngIf="oficio.archivo" [href]="'/uploads' + oficio.archivo" target="_blank">
+              {{ oficio.archivo }}
+            </a>
+            
+            <!-- Si no hay archivo adjunto -->
+            <span *ngIf="!oficio.archivo">No adjunto</span>
+          </td>
+        </ng-container>
+        
+
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef> Acciones </th>
           <td mat-cell *matCellDef="let oficio">
