--- a/oficialia/src/app/auth/registrer/registrer.component.html
+++ b/oficialia/src/app/auth/registrer/registrer.component.html
@@ -1,62 +1,65 @@
-<div class="container">
-    <h2>Registro de Usuario</h2>
-  
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-     
-      <div class="mb-3">
-        <label for="email" class="form-label">Correo electrónico</label>
-        <input
-          id="email"
-          type="email"
-          class="form-control"
-          formControlName="email"
-          placeholder="Introduce tu correo"
-        />
-        <div *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched" class="text-danger">
-          El correo es obligatorio y debe ser válido.
-        </div>
-      </div>
-  
- 
-      <div class="mb-3">
-        <label for="password" class="form-label">Contraseña</label>
-        <input
-          id="password"
-          type="password"
-          class="form-control"
-          formControlName="password"
-          placeholder="Introduce tu contraseña"
-        />
-        <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched" class="text-danger">
-          La contraseña es obligatoria y debe tener al menos 6 caracteres.
-        </div>
-      </div>
-  
-      <div class="mb-3">
-        <label for="confirmPassword" class="form-label">Confirmar contraseña</label>
-        <input
-          id="confirmPassword"
-          type="password"
-          class="form-control"
-          formControlName="confirmPassword"
-          placeholder="Confirma tu contraseña"
-        />
-        <div *ngIf="registerForm.get('confirmPassword')?.invalid && registerForm.get('confirmPassword')?.touched" class="text-danger">
-          La confirmación de la contraseña es obligatoria y debe tener al menos 6 caracteres.
-        </div>
-      </div>
-  
-   
-      <div *ngIf="message" class="alert alert-info">
-        {{ message }}
-      </div>
-  
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="row w-100">
+    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+      <div class="card shadow-lg">
+        <div class="card-body">
+          <img class="container mb-4" src="al_estilo_jalisco.png" alt="Logo">
+          <h2 class="mb-4 text-center">Registro de Usuario</h2>
+          <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+            <div class="mb-3">
+              <label for="email" class="form-label">Correo electrónico</label>
+              <input
+                id="email"
+                type="email"
+                class="form-control"
+                formControlName="email"
+                placeholder="Introduce tu correo"
+              />
+              <div *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched" class="text-danger">
+                El correo es obligatorio y debe ser válido.
+              </div>
+            </div>
+        
+            <div class="mb-3">
+              <label for="password" class="form-label">Contraseña</label>
+              <input
+                id="password"
+                type="password"
+                class="form-control"
+                formControlName="password"
+                placeholder="Introduce tu contraseña"
+              />
+              <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched" class="text-danger">
+                La contraseña es obligatoria y debe tener al menos 6 caracteres.
+              </div>
+            </div>
+        
+            <div class="mb-3">
+              <label for="confirmPassword" class="form-label">Confirmar contraseña</label>
+              <input
+                id="confirmPassword"
+                type="password"
+                class="form-control"
+                formControlName="confirmPassword"
+                placeholder="Confirma tu contraseña"
+              />
+              <div *ngIf="registerForm.get('confirmPassword')?.invalid && registerForm.get('confirmPassword')?.touched" class="text-danger">
+                La confirmación de la contraseña es obligatoria y debe tener al menos 6 caracteres.
+              </div>
+            </div>
 
-      <div class="d-grid">
-        <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid || loading">
-          {{ loading ? 'Registrando...' : 'Registrar' }}
-        </button>
+            <div *ngIf="message" class="alert alert-info">
+              {{ message }}
+            </div>
+        
+            <div class="d-grid">
+              <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid || loading">
+                {{ loading ? 'Registrando...' : 'Registrar' }}
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
-    </form>
+    </div>
   </div>
-  
+</div>
