--- a/oficialia/src/app/pages/agenda/agenda.component.css
+++ b/oficialia/src/app/pages/agenda/agenda.component.css
@@ -74,3 +74,17 @@ button {
     grid-template-columns: 1fr; 
   }
 }
+
+.cita_item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.evento_item{
+  flex-grow: 1;
+  margin-left: 10px;
+}
+
+button{
+  margin-left: 10px;
+}
