--- a/oficialia/src/app/pages/agenda/agenda.component.html
+++ b/oficialia/src/app/pages/agenda/agenda.component.html
@@ -39,6 +39,7 @@
       </ng-template>
 
       <div class="grid-container">
+        <!-- Calendario -->
         <div class="calendario-wrapper">
           <h3>Agenda</h3>
           <mat-calendar
@@ -48,7 +49,7 @@
           </mat-calendar>
         </div>
 
-        
+        <!-- Formulario de cita + lista de eventos -->
         <div class="agregar-cita">
           <h4>Agregar nueva cita</h4>
 
@@ -73,19 +74,25 @@
             Agregar Cita
           </button>
 
+          <!-- Citas del día -->
           <div *ngIf="fechaSeleccionada" class="eventos-dia mt-4">
             <h4>Citas del {{ fechaSeleccionada | date: 'fullDate' }}</h4>
             <ng-container *ngIf="citasDelDia.length > 0; else noCitas">
               <mat-list>
-                <mat-list-item *ngFor="let cita of citasDelDia">
+                <div *ngFor="let cita of citasDelDia" class="cita-row">
                   <div class="evento-item">
-                    <strong>{{ cita.nombre }}</strong><br>
+                    <strong>{{ cita.nombre_cita }}</strong><br>
                     <span>{{ cita.descripcion }}</span>
+                    <button mat-icon-button color="warn" (click)="onDelete(cita)">
+                      <mat-icon>delete</mat-icon>
+                    </button>
                   </div>
-                </mat-list-item>
+                 
+                </div>
               </mat-list>
             </ng-container>
           </div>
+          
         </div>
       </div>
     </div>
