funcionabilidad de agenda

--- a/oficialia/src/app/pages/oficio/oficio.component.html
+++ b/oficialia/src/app/pages/oficio/oficio.component.html
@@ -39,7 +39,7 @@
 
     <h6>Lista de Oficios</h6>
     <button mat-raised-button color="primary" (click)="openOficioDialog()">Nuevo Oficio</button>
-    <button mat-raised-button color="primary">Asignacion Dependencia</button>
+    <button mat-raised-button color="primary">Asignacion de Dependencias</button>
 
     <!-- Tabla de Oficios -->
     <div *ngIf="oficios.length">
