--- a/oficialia/src/app/pages/oficio/oficio.component.html
+++ b/oficialia/src/app/pages/oficio/oficio.component.html
@@ -46,8 +46,8 @@
       <table mat-table [dataSource]="oficios" class="mat-elevation-z8">
         <!-- Definición de columnas -->
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let oficio">{{ oficio.id ? oficio.id : 'ID no disponible' }}</td>
+          <th mat-header-cell *matHeaderCellDef class="hidden"> ID </th>
+          <td mat-cell *matCellDef="let oficio" class="hidden">{{ oficio.id ? oficio.id : 'ID no disponible' }}</td>
         </ng-container>
         
         <ng-container matColumnDef="numero">
