--- a/oficialia/src/app/pages/circular/circular.component.css
+++ b/oficialia/src/app/pages/circular/circular.component.css
@@ -37,3 +37,49 @@
     text-align: center;
   }
   
+
+  .circular-form {
+    max-width: 800px;
+    margin: 40px auto;
+    padding: 30px;
+    background: #ffffff;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    font-family: 'Segoe UI', sans-serif;
+  }
+  
+  .full-width {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  
+  .center {
+    text-align: center;
+  }
+  
+  mat-toolbar mat-icon {
+    margin-right: 8px;
+  }
+  
+  mat-sidenav {
+    width: 220px;
+  }
+  
+  .centered-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .circular {
+    height: 60px; /* Ajusta la altura del contenedor */
+    flex-direction: column;
+    justify-content: space-between; 
+    align-items: center; /* Centra verticalmente */
+    margin-bottom: 10px; /* Separa 10 píxeles de los elementos debajo */
+}
+
+.circular img {
+    height: 100%; /* Ajusta la altura de la imagen al 100% del contenedor */
+    width: auto; /* Mantiene la relación de aspecto de la imagen */
+    margin-right: 10px; /* Separa la imagen de otros elementos a la derecha */
+}
