--- a/oficialia/src/app/pages/user/user.component.html
+++ b/oficialia/src/app/pages/user/user.component.html
@@ -21,12 +21,9 @@
       </button>
       <span class="flex-1">Gestión de Permisos y Roles</span>
     </mat-toolbar>
-    <button mat-raised-button color="accent" (click)="abrirDialogoCambioRol()">
-      Cambiar Rol
-    </button>
+
     <div class="content">
       <mat-table [dataSource]="usuarios" class="mat-elevation-z8">
-
         <ng-container matColumnDef="email">
           <mat-header-cell *matHeaderCellDef> Usuario </mat-header-cell>
           <mat-cell *matCellDef="let user"> {{user.email}} </mat-cell>
@@ -34,12 +31,21 @@
 
         <ng-container matColumnDef="rol">
           <mat-header-cell *matHeaderCellDef> Rol </mat-header-cell>
-          <mat-cell *matCellDef="let user"> {{user.rol}} </mat-cell>
+          <mat-cell *matCellDef="let user">
+            <mat-select [(ngModel)]="user.id_roles" (selectionChange)="actualizarRol(user)">
+              <mat-option *ngFor="let rol of roles" [value]="rol.id">{{ rol.nombre }}</mat-option>
+            </mat-select>
+          </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
+
+      <!-- Botón para guardar cambios de rol -->
+      <button mat-raised-button color="primary" (click)="guardarCambioRol()">
+        Guardar cambio de rol
+      </button>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
